resolved theme issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
 
-@theme {
-  --color-*: initial;
-}
+@variant dark (.dark &);
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
